--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple To-Do List using localStorage - TheToDoList</title>
-    <link rel="stylesheet" href="design.css?version=0.05">
+    <link rel="stylesheet" href="design.css?version=0.06">
 </head>
     <body class="padding-0 margin-0 align-def font-size-def" style="font-family:Verdana, Geneva, Tahoma, sans-serif; color:#333; background-color: #111;">
         <div id="master" class="flex-def flex-wrap flex-gap" style="color:#ffffff; background-color: #222222;">
             <div id="todo" class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
-                <p><input type="text" id="todoText" class="padding-def outline-0 radius-def" style="background-color: #eee; border:1px solid #000;" placeholder="Todo.."></p>
+                <p><input type="text" id="todoText" class="padding-def outline-0 radius-def" style="background-color: #222; border:1px solid #000; color:#fff;" placeholder="Todo.."></p>
                 <p>
                     <select id="day" class="outline-0 border-def font-size-med">
                         <option value="1">1</option>
@@ -62,21 +62,20 @@
                 <p>
                     <button id="addTodo" class="padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #222222; color:#ffffff;">✎ Add</button>
                 </p>
-                <div id="innerTodo" class="padding-def border-0 word-break align-left"></div>
+                <div id="innerTodo" class="padding-def border-0 word-break align-right"></div>
             </div>
             <div id="recipe" class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
-                <p><textarea id="recipeText" class="padding-def outline-0 border-0 radius-def" style="resize:none; height:200px; width:75%; background-color: #eee; border:1px solid #000;" placeholder="Insert text.."></textarea></p>
+                <p><textarea id="recipeText" class="padding-def outline-0 border-0 radius-def" style="resize:none; height:200px; width:75%; color:#fff; background-color: #222; border:1px solid #000;" placeholder="Insert text.."></textarea></p>
                 <p>
                     <button id="addRecipe" class="padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #222222; color:#ffffff;">✎ Add</button>
-                    <button id="deleteRecipe" class="padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #222222; color:#ffffff;">♻ Recycle</button>
                 </p>
-                <div id="innerRecipe" class="padding-def border-0 word-break"></div>
+                <div id="innerRecipe" class="padding-def border-0 word-break align-right"></div>
             </div>
         </div>
         <div style="padding:100px;">
             <p>Copyright &copy; <a href="https://github.com/lobossl/todo">[github]</a></p>
             <p>TheToDoList.eu</p>
         </div>
-        <script src="app.js?version=0.05"></script>
+        <script src="app.js?version=0.06"></script>
     </body>
 </html>
