--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple To-Do List using localStorage - TheToDoList</title>
-    <link rel="stylesheet" href="design.css?version=0.09">
+    <link rel="stylesheet" href="design.css?version=0.11">
 </head>
     <body class="padding-0 margin-0 align-def font-size-def" style="font-family: 'Courier New', monospace; color:#000; background-color: #FF4500;">
         <div id="master" class="flex-def flex-wrap flex-gap" style="color:#ffffff; background-color: #222222;">
-            <div id="todo" class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
-                <p><input type="text" id="todoText" class="padding-def outline-0 radius-def" style="background-color: #222; border:1px solid #FF4500; color:#fff;" placeholder="Todo.."></p>
+            <div class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
+                <p><input type="text" id="todoText" class="padding-def outline-0 radius-def" style="background-color: #222; border:1px solid #FF4500; color:#fff;" placeholder="What do-do?"></p>
                 <p>
                     <select id="day" class="outline-0 border-def font-size-med cursor">
                         <option value="1">1</option>
@@ -60,22 +60,22 @@
                     </select>
                 </p>
                 <p>
-                    <button id="addTodo" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #111; color:#FF4500;">✎</button>
+                    <button id="addTodo" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #111; color:#eee;">✎</button>
                 </p>
-                <div id="innerTodo" class="padding-def border-0 word-break align-right"></div>
+                <div id="innerTodo" class="padding-def border-0 word-break align-def"></div>
             </div>
-            <div id="recipe" class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
-                <p><textarea id="recipeText" class="padding-def outline-0 border-0 radius-def" style="resize:none; height:200px; width:75%; color:#fff; background-color: #222; border:1px solid #FF4500;" placeholder="Insert text.."></textarea></p>
+            <div class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
+                <p><textarea id="recipeText" class="padding-def outline-0 border-0 radius-def" style="resize:none; height:200px; width:75%; color:#fff; background-color: #222; border:1px solid #FF4500;" placeholder="Add notes.."></textarea></p>
                 <p>
-                    <button id="addRecipe" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #111; color:#FF4500;">✎</button>
+                    <button id="addRecipe" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #111; color:#eee;">✎</button>
                 </p>
-                <div id="innerRecipe" class="padding-def border-0 word-break align-right"></div>
+                <div id="innerRecipe" class="padding-def border-0 word-break align-def"></div>
             </div>
         </div>
         <div style="padding:100px;">
             <p>Copyright &copy; <a href="https://github.com/lobossl/todo">[github]</a></p>
             <p>TheToDoList.eu</p>
         </div>
-        <script src="app.js?version=0.09"></script>
+        <script src="app.js?version=0.11"></script>
     </body>
 </html>
