--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple To-Do List using localStorage - TheToDoList</title>
-    <link rel="stylesheet" href="design.css?version=0.12">
+    <link rel="stylesheet" href="design.css?version=0.13">
 </head>
     <body class="padding-0 margin-0 align-def font-size-def" style="font-family: 'Courier New', monospace; color:#000; background-color: #FF4500;">
         <div id="master" class="flex-def flex-wrap flex-gap" style="color:#ffffff; background-color: #222222;">
@@ -60,27 +60,27 @@
                     </select>
                 </p>
                 <p>
-                    <button id="addTodo" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #111; color:#eee;">✎</button>
+                    <button id="addTodo" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0 user-select-0" style="background-color: #111; color:#eee;">✎</button>
                 </p>
                 <div id="innerTodo" class="padding-def border-0 word-break align-def"></div>
             </div>
             <div class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
                 <p><textarea id="recipeText" class="padding-def outline-0 border-0 radius-def" style="resize:none; height:200px; width:75%; color:#fff; background-color: #222; border:1px solid #FF4500;" placeholder="Add notes.."></textarea></p>
                 <p>
-                    <button id="addRecipe" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #111; color:#eee;">✎</button>
+                    <button id="addRecipe" class="cursor padding-def font-size-def radius-def border-0 outline-0 margin-0 user-select-0" style="background-color: #111; color:#eee;">✎</button>
                 </p>
                 <div id="innerRecipe" class="padding-def border-0 word-break align-def"></div>
             </div>
         </div>
-        <div style="padding:15px;">
-            <p>Copyright &copy; <a href="https://github.com/lobossl/todo">[github]</a></p>
+        <div style="padding:15px;" class="user-select-0">
+            <p>Copyright &copy; <a style="color:#fff;" href="https://github.com/lobossl/todo">[github]</a></p>
             <p>TheToDoList.eu</p>
-            <p id="backup" class="cursor" style="color:#fff;">Click here to Backup database</p>
+            <p id="backup" class="cursor" style="color:#fff;">Backup database</p>
             <p>
-                <label for="restore" name="restore" style="color:#fff;">Click here to Restore database</label><br>
+                <label for="restore" name="restore" style="color:#fff;">Restore database</label>
                 <input type="file" id="restore" accept="*.json">
             </p>
         </div>
-        <script src="app.js?version=0.12"></script>
+        <script src="app.js?version=0.13"></script>
     </body>
 </html>
