--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple To-Do List using localStorage - TheToDoList</title>
-    <link rel="stylesheet" href="design.css?version=1.0.0">
+    <link rel="stylesheet" href="design.css?version=1.0.1">
 </head>
     <body class="padding-0 margin-0 align-def font-size-def" style="font-family: 'Courier New', monospace; color:#eee; background-color: #000;">
         <div class="padding-def align-def" style="color:#ccc; background-color:#6e1818; border-bottom:3px solid #eee;">
             <h2>TheToDoList</h2>
             <h3>Step 1</h3>
-            <p class="cursor" id="backup">Click here to create backup.</p>
+            <span class="cursor" id="backup">Click here to create backup.</span>
             <h3>Step 2</h3>
             <p id="restore">
                 <label for="restore">Restore your file.</label>
@@ -26,6 +26,6 @@
         <p style="color:#555;" class="font-size-small">Simple To-Do List using localStorage</p>
         <p style="color:#555;" class="font-size-small">Works on all browsers</p>
         <p><a href="https://github.com/lobossl/todo" style="color:#555;" class="font-size-small">TheTodoList.eu - GitHub.com/lobossl</a></p>
-     <script src="app.js?version=1.0.0"></script>
+     <script src="app.js?version=1.0.1"></script>
     </body>
 </html>
