--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple To-Do List using localStorage - TheToDoList</title>
-    <link rel="stylesheet" href="design.css?version=1.0.1">
+    <link rel="stylesheet" href="design.css?version=1.0.2">
 </head>
     <body class="padding-0 margin-0 align-def font-size-def" style="font-family: 'Courier New', monospace; color:#eee; background-color: #000;">
         <div class="padding-def align-def" style="color:#ccc; background-color:#6e1818; border-bottom:3px solid #eee;">
@@ -18,14 +18,12 @@
             </p>
         </div>
         <p>
-            <input type="text" id="textTask" class="radius-def outline-0 padding-def border-0" style="background-color: #111; color:#eee;" placeholder="task..">
+            <input type="text" id="textTask" class="radius-def outline-0 padding-def border-0" style="background-color: #111; color:#eee;" placeholder="text:">
             <button class="radius-def outline-0 padding-def border-0" id="addTask" style="background-color: #111; color:#eee;">Add task</button>
         </p>
         <div id="main"></div>
         <div id="new"></div>
-        <p style="color:#555;" class="font-size-small">Simple To-Do List using localStorage</p>
-        <p style="color:#555;" class="font-size-small">Works on all browsers</p>
-        <p><a href="https://github.com/lobossl/todo" style="color:#555;" class="font-size-small">TheTodoList.eu - GitHub.com/lobossl</a></p>
-     <script src="app.js?version=1.0.1"></script>
+        <p><a href="https://github.com/lobossl/todo" style="color:#555;" class="font-size-small">TheTodoList.eu</a></p>
+     <script src="app.js?version=1.0.2"></script>
     </body>
 </html>
