--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </p>
         </div>
         <p>
-            <input type="text" id="textTask" class="radius-def outline-0 padding-def border-0" style="background-color: #111; color:#eee;" placeholder="text:">
+            <input type="text" id="textTask" class="radius-def outline-0 padding-def border-0" style="background-color: #111; color:#eee;" placeholder="text..">
             <button class="radius-def outline-0 padding-def border-0" id="addTask" style="background-color: #111; color:#eee;">Add task</button>
         </p>
         <div id="main"></div>
